--- a/index.html
+++ b/index.html
@@ -86,7 +86,24 @@
       Jelajahi dunia monster Nusantara. Tangkap, latih, berdagang, dan jadilah Founder. 
       Beli paket Founder sekarang untuk benefit 
       <button id="toggle-referral" class="inline-flex items-center font-semibold text-yellow-400 hover:text-yellow-300 focus:outline-none">
-        eksklusif & referral
+        eksklusif, referral & uang nyata.
+        Indomon Quest adalah game Text-Based RPG Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi. Pemain akan menjelajahi dunia fantasi Nusantara, menangkap monster unik terinspirasi mitologi & fauna Indonesia, membangun profesi untuk memproduksi resource, serta berdagang di Global Market dengan sistem trading pair.
+
+🎮 Core Gameplay: Explore → Battle → Capture → Trade → Upgrade → Explore lagi.
+
+🐲 Monster Collection: 100+ monster field & 100+ monster hasil breeding prestise.
+
+⚔️ Combat: Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).
+
+🏭 Profesi & Ekonomi: 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).
+
+📈 Progression: Player & monster hingga level 100.
+
+💎 Market & Monetization: Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.
+
+🌍 Community Features: Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.
+
+Dengan sistem progresi, breeding prestise, dan ekosistem ekonomi yang kuat, Indomon Quest menghadirkan pengalaman RPG unik, menantang, sekaligus bernuansa lokal Indonesia.
         <span id="arrow" class="ml-1 transform transition-transform duration-300">▼</span>
       </button>
     </p>
@@ -466,6 +483,7 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
 
 
 
