--- a/index.html
+++ b/index.html
@@ -96,24 +96,17 @@
       🎁 Dengan referral kamu bisa mengajak teman untuk bergabung.  
       Setiap pembelian paket dari referralmu, kamu akan mendapatkan <b>bonus reward 10%</b> secara otomatis.  
       Jadi semakin banyak referral, semakin besar keuntunganmu!
-
-      Indomon Quest adalah game Text-Based RPG Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi. Pemain akan menjelajahi dunia fantasi Nusantara, menangkap monster unik terinspirasi mitologi & fauna Indonesia, membangun profesi untuk memproduksi resource, serta berdagang di Global Market dengan sistem trading pair.
-
-🎮 Core Gameplay: Explore → Battle → Capture → Trade → Upgrade → Explore lagi.
-
-🐲 Monster Collection: 100+ monster field & 100+ monster hasil breeding prestise.
-
-⚔️ Combat: Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).
-
-🏭 Profesi & Ekonomi: 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).
-
-📈 Progression: Player & monster hingga level 100.
-
-💎 Market & Monetization: Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.
-
-🌍 Community Features: Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.
-
-Dengan sistem progresi, breeding prestise, dan ekosistem ekonomi yang kuat, Indomon Quest menghadirkan pengalaman RPG unik, menantang, sekaligus bernuansa lokal Indonesia.
+       <p><b>Indomon Quest</b> adalah game Text-Based RPG Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi.</p>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>🎮 <b>Core Gameplay:</b> Explore → Battle → Capture → Trade → Upgrade → Explore lagi.</li>
+          <li>🐲 <b>Monster Collection:</b> 100+ monster field & 100+ monster hasil breeding prestise.</li>
+          <li>⚔️ <b>Combat:</b> Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).</li>
+          <li>🏭 <b>Profesi & Ekonomi:</b> 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).</li>
+          <li>📈 <b>Progression:</b> Player & monster hingga level 100.</li>
+          <li>💎 <b>Market & Monetization:</b> Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.</li>
+          <li>🌍 <b>Community Features:</b> Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.</li>
+        </ul>
+        <p>Dengan sistem progresi, breeding prestise, dan ekosistem ekonomi yang kuat, Indomon Quest menghadirkan pengalaman RPG unik, menantang, sekaligus bernuansa lokal Indonesia.</p>
     </div>
 
     <div class="flex flex-col sm:flex-row items-center justify-center gap-3 mt-6">
@@ -484,6 +477,7 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
 
 
 
