--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
       Jadi semakin banyak referral, semakin besar keuntunganmu!
        <p><b>Indomon Quest</b> adalah game Text-Based RPG Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi.</p>
         <ul class="list-disc pl-5 space-y-1">
-          <li>🎮 <b>Core Gameplay:</b> Explore → Battle → Capture → Trade → Upgrade → Explore lagi.</li>
-          <li>🐲 <b>Monster Collection:</b> 100+ monster field & 100+ monster hasil breeding prestise.</li>
-          <li>⚔️ <b>Combat:</b> Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).</li>
-          <li>🏭 <b>Profesi & Ekonomi:</b> 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).</li>
-          <li>📈 <b>Progression:</b> Player & monster hingga level 100.</li>
-          <li>💎 <b>Market & Monetization:</b> Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.</li>
-          <li>🌍 <b>Community Features:</b> Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.</li>
+          <p>🎮 <b>Core Gameplay:</b> Explore → Battle → Capture → Trade → Upgrade → Explore lagi.</p>
+          <p>🐲 <b>Monster Collection:</b> 100+ monster field & 100+ monster hasil breeding prestise.</p>
+          <p>⚔️ <b>Combat:</b> Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).</p>
+          <p>🏭 <b>Profesi & Ekonomi:</b> 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).</p>
+          <p>📈 <b>Progression:</b> Player & monster hingga level 100.</p>
+          <p>💎 <b>Market & Monetization:</b> Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.</p>
+          <p>🌍 <b>Community Features:</b> Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.</p>
         </ul>
         <p>Dengan sistem progresi, breeding prestise, dan ekosistem ekonomi yang kuat, Indomon Quest menghadirkan pengalaman RPG unik, menantang, sekaligus bernuansa lokal Indonesia.</p>
     </div>
@@ -477,6 +477,7 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
 
 
 
