--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <h3 class="text-2xl font-bold mb-4 text-center">Roadmap</h3>
       <ol class="space-y-4 text-sm text-gray-300">
         <li><strong>Q4 2025</strong> — Closed Alpha (Founder only), implement core loop: explore, battle, capture, website & wiki (halaman informasi, panduan game lengkap)</li>
-        <li><strong>Q1 2026</strong> — Beta Founder: Profesi dasar + Market + Early PVP Arena.</li>
+        <li><strong>Q1 2026</strong> — Beta Founder & Pra-Registrasi: Profesi dasar + Market + Early PVP Arena.</li>
         <li><strong>Q2 2026</strong> — Open Beta: Breeder prestige unlock + leaderboard.</li>
         <li><strong>Q3 2026</strong> — Full Release: Cross-region updates, event reward fiat, mobile optimizations.</li>
         <li><strong>Post-Launch</strong> — Seasonal monsters, new professions, user-requested features.</li>
@@ -472,12 +472,3 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
