--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </details>
         <details class="bg-gray-900 p-3 rounded">
           <summary class="font-semibold">Apakah dana yang terkumpul aman?</summary>
-          <div class="mt-2">Dana digunakan untuk pengembangan game (hosting, dev, art, testing). Semua pembayaran tercatat di sistem. Kami juga menyediakan update berkala progress dev.</div>
+          <div class="mt-2">Dana digunakan untuk pengembangan game (hosting, dev, art, testing), pemberian reward kepada referrer &.para pemenang kompetisi dll. Semua pembayaran tercatat di sistem. Kami juga menyediakan update berkala progress dev.</div>
         </details>
         <details class="bg-gray-900 p-3 rounded">
           <summary class="font-semibold">Kapan referral aktif?</summary>
