--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </details>
         <details class="bg-gray-900 p-3 rounded">
           <summary class="font-semibold">Kapan referral aktif?</summary>
-          <div class="mt-2">Referral aktif setelah pembayaran terkonfirmasi & data pembeli tercatat di database. Referral akan muncul di dashboard pengguna.</div>
+          <div class="mt-2">Referral aktif setelah login via Beli Package atau via Pra-Registrasi. Reward referral didapat dari referral beli paket lalu pembayaran terkonfirmasi & data pembeli tercatat di database. Link referral akan muncul di dashboard pengguna.</div>
         </details>
       </div>
     </section>
@@ -472,3 +472,4 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
