--- a/index.html
+++ b/index.html
@@ -186,6 +186,22 @@
           <div class="wind" style="bottom:18px; left:50%; transform:translateX(-50%); animation-duration:11s;"></div>
         </div>
 
+        <!-- Tambahkan popup modal (letakkan sebelum </body>) -->
+        <div id="payment-modal" class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50">
+          <div class="bg-gray-900 rounded-2xl p-6 w-80 text-center shadow-xl">
+            <h3 class="text-xl font-bold mb-4">Pilih Metode Pembayaran</h3>
+            <div class="space-y-3">
+              <button id="pay-mayar" class="w-full px-4 py-2 bg-yellow-500 text-black font-bold rounded-lg hover:bg-yellow-400">
+                Mayar.id
+              </button>
+              <button id="pay-nowpayments" class="w-full px-4 py-2 bg-indigo-500 text-white font-bold rounded-lg hover:bg-indigo-400">
+                NOWPayments
+              </button>
+            </div>
+            <button id="close-modal" class="mt-5 text-gray-400 hover:text-gray-200 text-sm">Batal</button>
+          </div>
+        </div>
+
         <!-- PLATINUM -->
         <div class="bg-gray-900 p-6 rounded-2xl shadow-xl relative border-4 border-yellow-400 overflow-hidden">
           <span class="absolute top-6 right-[-40px] rotate-45 bg-yellow-400 text-black text-xs md:text-sm font-bold px-10 py-1 shadow-md animate-pulse inline-block">
@@ -279,6 +295,46 @@
       © 2025 Indomon Quest. All rights reserved.
     </footer>
   </main>
+
+  <!-- Pilihan Payment Gateway -->
+  <script>
+  const modal = document.getElementById("payment-modal");
+  const closeModal = document.getElementById("close-modal");
+  let tempCheckoutUrl = null;
+
+  // Buka modal setiap klik Beli Sekarang
+  document.querySelectorAll("[id^=buy-]").forEach(btn => {
+    btn.addEventListener("click", async (e) => {
+      e.preventDefault();
+      tempCheckoutUrl = btn.getAttribute("href"); // simpan url asli
+      modal.classList.remove("hidden");
+      modal.classList.add("flex");
+    });
+  });
+
+  // Tutup modal
+  closeModal.addEventListener("click", () => {
+    modal.classList.remove("flex");
+    modal.classList.add("hidden");
+    tempCheckoutUrl = null;
+  });
+
+  // Klik Mayar → tetap gunakan URL default
+  document.getElementById("pay-mayar").addEventListener("click", () => {
+    if (tempCheckoutUrl) {
+      window.location.href = tempCheckoutUrl;
+    }
+  });
+
+  // Klik NOWPayments → redirect ke NOWPayments API/Link
+  document.getElementById("pay-nowpayments").addEventListener("click", () => {
+    if (tempCheckoutUrl) {
+      // contoh: ganti domain ke NOWPayments (nanti disesuaikan endpoint aslimu)
+      const nowUrl = "https://nowpayments.io/payment?source=" + encodeURIComponent(tempCheckoutUrl);
+      window.location.href = nowUrl;
+    }
+  });
+</script>
 
  <!-- Collapsible  -->
    <script>
@@ -472,4 +528,5 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
 
