--- a/index.html
+++ b/index.html
@@ -186,22 +186,6 @@
           <div class="wind" style="bottom:18px; left:50%; transform:translateX(-50%); animation-duration:11s;"></div>
         </div>
 
-        <!-- Tambahkan popup modal (letakkan sebelum </body>) -->
-        <div id="payment-modal" class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50">
-          <div class="bg-gray-900 rounded-2xl p-6 w-80 text-center shadow-xl">
-            <h3 class="text-xl font-bold mb-4">Pilih Metode Pembayaran</h3>
-            <div class="space-y-3">
-              <button id="pay-mayar" class="w-full px-4 py-2 bg-yellow-500 text-black font-bold rounded-lg hover:bg-yellow-400">
-                Mayar.id
-              </button>
-              <button id="pay-nowpayments" class="w-full px-4 py-2 bg-indigo-500 text-white font-bold rounded-lg hover:bg-indigo-400">
-                NOWPayments
-              </button>
-            </div>
-            <button id="close-modal" class="mt-5 text-gray-400 hover:text-gray-200 text-sm">Batal</button>
-          </div>
-        </div>
-
         <!-- PLATINUM -->
         <div class="bg-gray-900 p-6 rounded-2xl shadow-xl relative border-4 border-yellow-400 overflow-hidden">
           <span class="absolute top-6 right-[-40px] rotate-45 bg-yellow-400 text-black text-xs md:text-sm font-bold px-10 py-1 shadow-md animate-pulse inline-block">
@@ -241,8 +225,23 @@
           <a id="buy-diamond" href="https://digidikari.myr.id/pl/diamond-pack" target="_blank" class="inline-block px-5 py-2 bg-yellow-500 text-black font-bold rounded-lg hover:bg-yellow-400 z-10 relative">Beli Sekarang</a>
           <div class="wind" style="bottom:18px; left:50%; transform:translateX(-50%); animation-duration:12s;"></div>
         </div>
-
       </div>
+
+      <!-- Popup Modal (letakkan sebelum </body>) -->
+        <div id="payment-modal" class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50">
+          <div class="bg-gray-900 rounded-2xl p-6 w-80 text-center shadow-xl">
+            <h3 class="text-xl font-bold mb-4">Pilih Metode Pembayaran</h3>
+            <div class="space-y-3">
+              <button id="pay-mayar" class="w-full px-4 py-2 bg-yellow-500 text-black font-bold rounded-lg hover:bg-yellow-400">
+                Mayar.id
+              </button>
+              <button id="pay-nowpayments" class="w-full px-4 py-2 bg-indigo-500 text-white font-bold rounded-lg hover:bg-indigo-400">
+                NOWPayments
+              </button>
+            </div>
+            <button id="close-modal" class="mt-5 text-gray-400 hover:text-gray-200 text-sm">Batal</button>
+          </div>
+        </div>
     </section>
 
     <!-- ROADMAP -->
@@ -524,3 +523,4 @@ onSnapshot(counterRef, (docSnap) => {
 </body>
 
 </html>
+
