--- a/index.html
+++ b/index.html
@@ -529,7 +529,8 @@ onSnapshot(counterRef, (docSnap) => {
 });
 </script>
 
-  <script>
+<!-- Multibahasa -->
+<script>
   // default bahasa
   let currentLang = localStorage.getItem("lang") || "en";
 
@@ -539,10 +540,10 @@ onSnapshot(counterRef, (docSnap) => {
     applyLang(data);
     currentLang = lang;
     localStorage.setItem("lang", lang);
+    updateLangButtons(); // 🔹 update tombol aktif
   }
 
   function applyLang(data) {
-    // contoh: elemen yang punya data-i18n="hero.title"
     document.querySelectorAll("[data-i18n]").forEach(el => {
       const keys = el.getAttribute("data-i18n").split(".");
       let value = data;
@@ -553,17 +554,30 @@ onSnapshot(counterRef, (docSnap) => {
     });
   }
 
-  // pertama kali load
-  loadLang(currentLang);
+  // 🔹 update style tombol
+  function updateLangButtons() {
+    const btnId = document.getElementById("lang-id");
+    const btnEn = document.getElementById("lang-en");
 
-  // toggle bahasa manual
-  function switchLang() {
-    const newLang = currentLang === "en" ? "id" : "en";
-    loadLang(newLang);
+    if (currentLang === "id") {
+      btnId.classList.add("bg-yellow-400", "text-black");
+      btnEn.classList.remove("bg-yellow-400", "text-black");
+    } else {
+      btnEn.classList.add("bg-yellow-400", "text-black");
+      btnId.classList.remove("bg-yellow-400", "text-black");
+    }
   }
+
+  // event listener tombol
+  document.getElementById("lang-id").addEventListener("click", () => loadLang("id"));
+  document.getElementById("lang-en").addEventListener("click", () => loadLang("en"));
+
+  // load awal
+  loadLang(currentLang);
 </script>
   
 </body>
 
 </html>
+
 
