--- a/index.html
+++ b/index.html
@@ -87,44 +87,36 @@
   </div>
     
   <div class="text-center py-16 px-4">
+    <!-- Judul -->
     <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-3 animate__animated animate__fadeInDown glow"
       data-i18n="hero.title">
       🐦‍🔥 Indomon Quest
     </h1>
 
-    <!-- Subtitle -->
-    <p class="text-base sm:text-lg md:text-xl max-w-2xl mx-auto text-gray-200 mb-2 animate__animated animate__fadeInUp"
+    <!-- Subjudul + tombol collapsible -->
+    <p class="text-base sm:text-lg md:text-xl max-w-2xl mx-auto text-gray-200 mb-6 animate__animated animate__fadeInUp"
       data-i18n="hero.subtitle">
-      Jelajahi dunia monster Nusantara. Tangkap, latih, berdagang, dan jadilah Founder.
-    </p>
-
-    <!-- Tombol collapsible dengan i18n -->
-    <div class="mb-6">
-      <button id="toggle-referral"
-        class="inline-flex items-center font-semibold text-yellow-400 hover:text-yellow-300 focus:outline-none"
-        data-i18n="hero.referral_btn">
+      Jelajahi dunia monster Nusantara. Tangkap, latih, berdagang, dan jadilah Founder. 
+      Beli paket Founder sekarang untuk benefit 
+      <button id="toggle-referral" class="inline-flex items-center font-semibold text-yellow-400 hover:text-yellow-300 focus:outline-none"
+        data-i18n="referral.title">
         eksklusif, referral & uang nyata.
         <span id="arrow" class="ml-1 transform transition-transform duration-300">▼</span>
       </button>
-    </div>
+    </p>
 
     <!-- Collapsible content -->
-    <div id="referral-content" class="hidden max-w-xl mx-auto text-sm text-gray-300 mt-3 text-left"
-      data-i18n="referral.content_html">
-       <p><b>Indomon Quest</b> adalah game Text-Based RPG Indonesia yang menggabungkan eksplorasi, koleksi monster, dan ekonomi virtual berbasis profesi.</p>
-       <p>🎮 <b>Core Gameplay:</b> Explore → Battle → Capture → Trade → Upgrade → Explore lagi.</p>
-       <p>🐲 <b>Monster Collection:</b> 100+ monster field & 100+ monster hasil breeding prestise.</p>
-       <p>⚔️ <b>Combat:</b> Sistem battle turn-based dengan elemen (Fire, Water, Earth, Wind, Spirit, dll).</p>
-       <p>🏭 <b>Profesi & Ekonomi:</b> 10 profesi saling terhubung (Farmer, Miner, Blacksmith, dll) + 1 prestise (Breeder).</p>
-       <p>📈 <b>Progression:</b> Player & monster hingga level 100.</p>
-       <p>💎 <b>Market & Monetization:</b> Semua resource, item, dan monster bisa diperdagangkan di Global Market; hadiah dapat diuangkan, tersedia paket petualang Bronze–Diamond.</p>
-       <p>🌍 <b>Community Features:</b> Guild, PvP Arena, Dungeon Raid, Seasonal Events berhadiah uang nyata.</p>
-       <p>Dengan sistem progresi, breeding prestise, dan ekosistem ekonomi yang kuat, Indomon Quest menghadirkan pengalaman RPG unik, menantang, sekaligus bernuansa lokal Indonesia.</p>
+    <div id="referral-content" class="hidden max-w-xl mx-auto text-sm text-gray-300 mt-3"
+      data-i18n="referral.content">
+      <!-- Konten collapsible akan diisi otomatis dari JSON -->
     </div>
 
+    <!-- Tombol aksi -->
     <div class="flex flex-col sm:flex-row items-center justify-center gap-3 mt-6">
-      <a href="#packages" class="px-5 py-3 bg-yellow-500 text-black font-bold rounded-xl shadow hover:bg-yellow-400 transform transition hover:scale-105" data-i18n="hero.cta_packs">Lihat Paket</a>
-      <a href="#register" class="px-5 py-3 border border-gray-700 rounded-xl text-gray-200 hover:bg-gray-800" data-i18n="hero.cta_register">Pra-Registrasi</a>
+      <a href="#packages" class="px-5 py-3 bg-yellow-500 text-black font-bold rounded-xl shadow hover:bg-yellow-400 transform transition hover:scale-105"
+        data-i18n="hero.btn_packages">Lihat Paket</a>
+      <a href="#register" class="px-5 py-3 border border-gray-700 rounded-xl text-gray-200 hover:bg-gray-800"
+        data-i18n="hero.btn_register">Pra-Registrasi</a>
     </div>
   </div>
 </header>
@@ -314,46 +306,58 @@
     </footer>
   </main>
 
-  <!-- Script Collapsible -->
- <script>
+  <!-- Script Bahasa + Collapsible -->
+<script>
+  let currentLang = localStorage.getItem("lang") || "en";
+
+  async function loadLang(lang) {
+    const res = await fetch(`./lang/${lang}.json`);
+    const data = await res.json();
+    applyLang(data);
+    currentLang = lang;
+    localStorage.setItem("lang", lang);
+  }
+
+  function applyLang(data) {
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+      const keys = el.getAttribute("data-i18n").split(".");
+      let value = data;
+      keys.forEach(k => value = value?.[k]);
+
+      if (typeof value === "string") {
+        el.innerHTML = value;
+      } else if (Array.isArray(value)) {
+        el.innerHTML = value.map(p => `<p>${p}</p>`).join("");
+      }
+    });
+
+    // setelah update bahasa, pasang ulang event collapsible
+    initReferralToggle();
+  }
+
   function initReferralToggle() {
     const btn = document.getElementById("toggle-referral");
     const content = document.getElementById("referral-content");
     const arrow = document.getElementById("arrow");
 
     if (btn && content && arrow) {
-      // hapus listener lama biar tidak dobel
-      btn.replaceWith(btn.cloneNode(true));
-      const newBtn = document.getElementById("toggle-referral");
-      const newArrow = document.getElementById("arrow");
-
-      newBtn.addEventListener("click", () => {
+      btn.onclick = () => {
         content.classList.toggle("hidden");
-        newArrow.style.transform = content.classList.contains("hidden")
+        arrow.style.transform = content.classList.contains("hidden")
           ? "rotate(0deg)"
           : "rotate(180deg)";
-      });
+      };
     }
   }
 
-  // jalankan sekali saat halaman pertama kali load
-  document.addEventListener("DOMContentLoaded", () => {
-    initReferralToggle();
-  });
+  // tombol switch bahasa
+  document.getElementById("lang-id").addEventListener("click", () => loadLang("id"));
+  document.getElementById("lang-en").addEventListener("click", () => loadLang("en"));
 
-  // modifikasi applyLang agar re-init toggle setiap bahasa berubah
-  function applyLang(data) {
-    document.querySelectorAll("[data-i18n]").forEach(el => {
-      const keys = el.getAttribute("data-i18n").split(".");
-      let value = data;
-      keys.forEach(k => value = value?.[k]);
-      if (typeof value === "string") {
-        el.innerHTML = value;
-      }
-    });
-    // re-init setelah teks di-replace
-    initReferralToggle();
-  }
+  // pertama kali load
+  document.addEventListener("DOMContentLoaded", () => {
+    loadLang(currentLang);
+  });
 </script>
   
   <!-- minimal leaf spawner (lightweight) -->
@@ -617,3 +621,4 @@ onSnapshot(counterRef, (docSnap) => {
 </body>
 
 </html>
+
